[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tiles/tile_0688.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/tile_0419.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tiles/tile_0418.png" type="Texture" id=3]
[ext_resource path="res://FrogEnemy.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.85824

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "standing",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dying",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "jumping",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 7.74188

[node name="FrogEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2147483650
collision_mask = 5
script = ExtResource( 4 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "standing"
playing = true

[node name="TintTween" type="Tween" parent="AnimatedSprite"]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 10.9133, 16.6677 )

[node name="HitCollision" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
collision_layer = 0

[node name="HitCollisionShape" type="CollisionShape2D" parent="HitCollision"]
position = Vector2( 0, 4.5 )
shape = SubResource( 3 )
[connection signal="timeout" from="DyingTimer" to="." method="_on_DyingTimer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="area_entered" from="HitCollision" to="." method="_on_HitCollision_area_entered"]
